--- a/Vanrise/Code/Vanrise.Common.Web/Vanrise.Common.Web.csproj
+++ b/Vanrise/Code/Vanrise.Common.Web/Vanrise.Common.Web.csproj
@@ -261,9 +261,12 @@
     <Content Include="Common\Directives\VRApplicationVisibility\vr-common-applicationvisibility-settings.js" />
     <Content Include="Common\Directives\VRApplicationVisibility\vr-common-modulevisibility-selective.js" />
     <Content Include="Common\Directives\VRApplicationVisibility\VRModuleVisibilityEditorController.js" />
+    <Content Include="Common\Directives\VRComponentType\Templates\OverriddenConfigurationComponentType.html" />
     <Content Include="Common\Directives\VRComponentType\Templates\VRComponentTypeGridTemplate.html" />
     <Content Include="Common\Directives\VRComponentType\vr-common-componenttype-grid.js" />
+    <Content Include="Common\Directives\VRComponentType\vr-common-componenttype-selector.js" />
     <Content Include="Common\Directives\VRComponentType\vr-common-componenttypeconfig-selector.js" />
+    <Content Include="Common\Directives\VRComponentType\vr-common-overriddenconfiguration-componenttype.js" />
     <Content Include="Common\Directives\VRConnection\Templates\VRConnectionGridTemplate.html" />
     <Content Include="Common\Directives\VRConnection\vr-common-connection-grid.js" />
     <Content Include="Common\Directives\VRConnection\vr-common-connectiontypeconfig-selector.js" />
