--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -58,6 +58,8 @@
     </Compile>
     <Compile Include="City\CityInfoFilter.cs" />
     <Compile Include="City\CityQuery.cs" />
+    <Compile Include="ComponentType\ComponentTypeInfo.cs" />
+    <Compile Include="ComponentType\ComponentTypeInfoFilter.cs" />
     <Compile Include="ComponentType\VRComponentType.cs" />
     <Compile Include="ComponentType\VRComponentTypeConfig.cs" />
     <Compile Include="ComponentType\VRComponentTypeDetail.cs" />
