Add new config structure concept using  configSource="ConnectionStrings.config" and file="appSettings.config"
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41245

--- a/QualityMeasurement/Code/QualityMeasurement.Web/QualityMeasurement.Web.csproj
+++ b/QualityMeasurement/Code/QualityMeasurement.Web/QualityMeasurement.Web.csproj
@@ -335,6 +335,8 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="appSettings.config" />
+    <Content Include="ConnectionStrings.config" />
     <None Include="Properties\PublishProfiles\QualityMeasurement.pubxml" />
     <None Include="Web.config.exclude" />
     <None Include="Web.config.Debug.exclude">
