--- a/QualityMeasurement/Code/QualityMeasurement.DevRuntime/App.config
+++ b/QualityMeasurement/Code/QualityMeasurement.DevRuntime/App.config
@@ -36,21 +36,13 @@
       </exceptionLogger>
     </exceptionLoggers>
   </vanriseLogging>
-  <connectionStrings>
-    <!--<add name="ConfigurationDBConnString" connectionString="Server=192.168.110.195;Database=ClearVoiceConfigurationDB;User ID=sa;Password=QAP@ssw0rd;" />
-    <add name="TransactionDBConnString" connectionString="Data Source=192.168.110.195;Initial Catalog=ClearVoiceTransactionDB;User ID=sa; Password=QAP@ssw0rd" />
-    <add name="LogDBConnString" connectionString="Initial Catalog=ClearVoiceLoggingDB;Data Source=192.168.110.195;User ID=sa; Password=QAP@ssw0rd" />
-    <add name="QMConnString" connectionString="Server=192.168.110.195;Database=ClearVoiceConfigurationDB;User ID=sa;Password=QAP@ssw0rd" />-->
-    
-    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurementConfiguration;User ID=development;Password=dev!123;" />
+  <connectionStrings configSource="ConnectionStrings.config">    
+    <!--<add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurementConfiguration;User ID=development;Password=dev!123;" />
     <add name="TransactionDBConnString" connectionString="Data Source=.;Initial Catalog=QMTransactionDB;User ID=sa; Password=p@ssw0rd" />
     <add name="QMConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurement_Dev;User ID=Development;Password=dev!123" />
-    <add name="LogDBConnString" connectionString="Initial Catalog=QualityMeasurementLog;Data Source=.;User ID=sa; Password=p@ssw0rd" />
-
-    <!--<add name="CDRDBConnectionString" connectionString="Data Source=192.168.110.185;Initial Catalog=QualityMeasurement_Dev;User ID=development;Password=dev!123;" providerName="System.Data.SqlClient" />-->
-    <!--<add name="LogDBConnString" connectionString="Initial Catalog=QualityMeasurementLog;Data Source=.;User ID=sa; Password=p@ssw0rd" />-->
+    <add name="LogDBConnString" connectionString="Initial Catalog=QualityMeasurementLog;Data Source=.;User ID=sa; Password=p@ssw0rd" />-->
   </connectionStrings>
-  <appSettings>
+  <appSettings file="appSettings.config">
     <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
     <add key="IsRuntimeService" value="false"/>
 
