--- a/QualityMeasurement/Code/QualityMeasurement.Web/Web.config
+++ b/QualityMeasurement/Code/QualityMeasurement.Web/Web.config
@@ -22,23 +22,8 @@
       <exceptionLogger name="DefaultExceptionLogger" type="Vanrise.Common.DefaultExceptionLogger, Vanrise.Common"></exceptionLogger>
     </exceptionLoggers>
   </vanriseLogging>
-  <connectionStrings>
-    <!--<add name="ConfigurationDBConnString" connectionString="Server=192.168.110.195;Database=ClearVoiceConfigurationDB;User ID=sa;Password=QAP@ssw0rd;" />
-    <add name="TransactionDBConnString" connectionString="Data Source=192.168.110.195;Initial Catalog=ClearVoiceTransactionDB;User ID=sa; Password=QAP@ssw0rd" />
-    <add name="LogDBConnString" connectionString="Initial Catalog=ClearVoiceLoggingDB;Data Source=192.168.110.195;User ID=sa; Password=QAP@ssw0rd" />
-    <add name="QMConnString" connectionString="Server=192.168.110.195;Database=ClearVoiceConfigurationDB;User ID=sa;Password=QAP@ssw0rd" />-->
-    
-    <!--<add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185\MSSQL2014;Database=ClearVoice_Online;User ID=Application_Online_User;Password=Application_Online_User;" />
-    <add name="TransactionDBConnString" connectionString="Data Source=192.168.110.185\MSSQL2014;Initial Catalog=ClearVoice_Online_Transaction;User ID=Application_Online_User; Password=Application_Online_User" />
-    <add name="LogDBConnString" connectionString="Initial Catalog=ClearVoice_Online_Logging;Data Source=192.168.110.185\MSSQL2014;User ID=Application_Online_User; Password=Application_Online_User" />
-    <add name="QMConnString" connectionString="Server=192.168.110.185\MSSQL2014;Database=ClearVoice_Online;User ID=Application_Online_User;Password=Application_Online_User" />-->
-
-    <!--<add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurementConfigurationOnline;User ID=development;Password=dev!123;" />
-    <add name="TransactionDBConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurementTransactionDB;User ID=Development;Password=dev!123" />
-    <add name="LogDBConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurementLog;User ID=Development;Password=dev!123" />
-    <add name="QMConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurement;User ID=Development;Password=dev!123" />-->
-    
-    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurementConfiguration;User ID=development;Password=dev!123;" />
+  <connectionStrings configSource="ConnectionStrings.config">    
+    <!--<add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurementConfiguration;User ID=development;Password=dev!123;" />
     <add name="QMConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurement_Dev;User ID=Development;Password=dev!123" />
     
     <add name="TransactionDBConnString" connectionString="Data Source=.;Initial Catalog=QMTransactionDB;User ID=sa; Password=p@ssw0rd" />
@@ -46,9 +31,9 @@
 
     <add name="MainDBConnString" connectionString=""/>
     
-    <add name="BIConnectionString" connectionString="Provider=MSOLAP;Data Source = http://192.168.110.185:1214/msmdpump.dll; Initial Catalog = QualityMeasurementBI; User Id = vanrise\olap.access; Password = 0l@p@cce$$" />
+    <add name="BIConnectionString" connectionString="Provider=MSOLAP;Data Source = http://192.168.110.185:1214/msmdpump.dll; Initial Catalog = QualityMeasurementBI; User Id = vanrise\olap.access; Password = 0l@p@cce$$" />-->
   </connectionStrings>
-  <appSettings>
+  <appSettings file="appSettings.config">
     <add key="Web_ExtendedModulesNames" value=""/>
     <add key="Vanrise License" value="28-22-92-DB-92-8B-8A-DE-78-FD-95-85-7B-E3-E8-19::==wMwkDM5EDMyMDM5ATNxAjM:kVGdwlncj5WR09mT" />
     <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
