implemented OverriddenConfiguration behaviors
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41254

--- a/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
+++ b/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Group\GroupManager.cs" />
     <Compile Include="SecurityManager.cs" />
     <Compile Include="UserManager.cs" />
+    <Compile Include="ViewOverriddenConfiguration.cs" />
     <Compile Include="ViewTypeManager.cs" />
     <Compile Include="ViewUserAccessContext.cs" />
     <Compile Include="WidgetDefinitionManager.cs" />
