--- a/Vanrise/Code/Vanrise.Notification.Business/Vanrise.Notification.Business.csproj
+++ b/Vanrise/Code/Vanrise.Notification.Business/Vanrise.Notification.Business.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VRActionDefinitionManager.cs" />
     <Compile Include="VRActionManager.cs" />
+    <Compile Include="VRAlertRuleTypeOverriddenConfiguration.cs" />
     <Compile Include="VRAlertRuleViewSettings.cs" />
     <Compile Include="VRAlertRuleManager.cs" />
     <Compile Include="VRAlertRuleNotificationManager.cs" />
