Implementing financial account selector
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41269

--- a/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
@@ -139,7 +139,10 @@
     <Compile Include="AccountTypeOverriddenConfiguration.cs" />
     <Compile Include="Extensions\AccountMemoryAnalyticDataManager.cs" />
     <Compile Include="Extensions\DIDSynchronizer.cs" />
+    <Compile Include="Extensions\FinancialAccountBalanceManager.cs" />
+    <Compile Include="Extensions\FinancialAccountBalanceSetting.cs" />
     <Compile Include="Filters\IBusinessEntityDefinitionFilter\ChargeableEntityDefinitionFilter.cs" />
+    <Compile Include="Filters\IAccountFilter\FinancialAccountBEFilter.cs" />
     <Compile Include="FinancialAccount\FinancialAccountBalanceAccountFilter.cs" />
     <Compile Include="FinancialAccount\FinancialAccountDefinitionManager.cs" />
     <Compile Include="FinancialAccount\FinancialAccountInvoiceAccountFilter.cs" />
