--- a/Vanrise/Code/Vanrise.AccountBalance.Entities/Vanrise.AccountBalance.Entities.csproj
+++ b/Vanrise/Code/Vanrise.AccountBalance.Entities/Vanrise.AccountBalance.Entities.csproj
@@ -100,6 +100,8 @@
     <Compile Include="LiveBalance\LiveBalanceNextThresholdUpdateEntity.cs" />
     <Compile Include="LiveBalance\LiveBalanceToUpdate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UpdateAccountBalance\UpdateAccountBalanceSettings.cs" />
+    <Compile Include="UpdateAccountBalance\UpdateAccountBalanceTypeCombination.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.BEBridge.Entities\Vanrise.BEBridge.Entities.csproj">
