--- a/Retail/Code/Retail.Web/Web.config
+++ b/Retail/Code/Retail.Web/Web.config
@@ -37,7 +37,6 @@
     <add name="RetailCDRDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_CDR;User ID=Development;Password=dev!123"/>
     <add name="RetailAnalyticsDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_Analytics;User ID=Development;Password=dev!123"/>
 
-    <add name="VRNotificationTransactionDBConnString" connectionString="Data Source=.;Initial Catalog=Retail_Dev_Transaction;User ID=sa; Password=p@ssw0rd" />
     <add name="RingoDBConnString" connectionString="Server=192.168.110.185;User ID=development;Password=dev!123;Database=Retail_Dev_Ringo;"/>
 
     -->
@@ -61,6 +60,7 @@
     <add key="BusinessProcessDBConnStringKey"                   value="TransactionDBConnString"/>
     <add key="BigDataServiceDBConnStringKey"                    value="TransactionDBConnString"/>
     <add key="IntegrationConnStringKey"                         value="TransactionDBConnString"/>
+    <add key="VRNotificationTransactionDBConnStringKey"         value="TransactionDBConnString"/>
 
     <add key="QueueItemDBConnStringKey"                         value="QueueItemDBConnString"/>
 
@@ -77,10 +77,9 @@
     <add key="RulesDBConnStringKey"                             value="ConfigurationDBConnString"/>
     <add key="InvoiceDBConnStringKey"                           value="ConfigurationDBConnString"/>
     <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
-
     <add key="VR_AccountBalance_TransactionDBConnStringKey"     value="ConfigurationDBConnString"/>
-    <add key="NumberingPlanDBConnStringKey"                     value="NumberingPlanDBConnString"/>
-
+    
+    <add key="NumberingPlanDBConnStringKey"                     value="RetailDBConnString"/>
     <add key="Retail_BE_DBConnStringKey"                        value="RetailDBConnString"/>
 
     <add key="RetailCDRDBConnStringKey"                         value="RetailCDRDBConnString"/>
