--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Controllers\CustomerCountryController.cs" />
     <Compile Include="Controllers\OtherSaleRateController.cs" />
     <Compile Include="Controllers\SaleEntityZoneRoutingProductHistoryController.cs" />
     <Compile Include="Controllers\SalePriceListChangeController.cs" />
