--- a/Retail/Code/Retail.BusinessEntity.Web/Retail.BusinessEntity.Web.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail.BusinessEntity.Web.csproj
@@ -327,6 +327,8 @@
     <Content Include="Retail_BusinessEntity\Directives\AccountViews\MainExtensions\Templates\FinancialTransactionsViewTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountViews\MainExtensions\Templates\PortalAccountViewTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountViews\MainExtensions\Templates\SubAccountsViewTemplate.html" />
+    <Content Include="Retail_BusinessEntity\Directives\Account\MainExtensions\retail-be-accountbe-runtimeselectorfilter.js" />
+    <Content Include="Retail_BusinessEntity\Directives\Account\MainExtensions\Templates\AccountBERuntimeSelectorFilterTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\Account\retail-be-account-editor.js" />
     <Content Include="Retail_BusinessEntity\Directives\Account\retail-be-account-genericfielddefinition-selector.js" />
     <Content Include="Retail_BusinessEntity\Directives\Account\retail-be-account-synchronizer-editor.js" />
