--- a/Vanrise/Code/Vanrise.AccountBalance.Entities/Vanrise.AccountBalance.Entities.csproj
+++ b/Vanrise/Code/Vanrise.AccountBalance.Entities/Vanrise.AccountBalance.Entities.csproj
@@ -53,6 +53,7 @@
     <Compile Include="AccountStatement\AccountStatementResult.cs" />
     <Compile Include="AccountStatement\AccountStatementQuery.cs" />
     <Compile Include="AccountStatement\AccountStatementViewSettings.cs" />
+    <Compile Include="AccountUsageOverride\AccountUsageOverride.cs" />
     <Compile Include="AccountUsage\AccountUsage.cs" />
     <Compile Include="AccountUsage\AccountUsageInfo.cs" />
     <Compile Include="AccountUsage\AccountUsagePeriodSettings.cs" />
