--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Business/TOne.WhS.BusinessEntity.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Business/TOne.WhS.BusinessEntity.Business.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Helper.cs" />
     <Compile Include="PricingRules\PricingRuleRateTypeItemContext.cs" />
     <Compile Include="ReleaseCodeManager.cs" />
+    <Compile Include="RoutingProducts\SaleEntityRoutingProductReadByRateBED.cs" />
     <Compile Include="SaleRate\History\CustomerZoneRateHistoryLocator.cs" />
     <Compile Include="SaleRate\History\CustomerZoneRateHistoryReader.cs" />
     <Compile Include="SaleRate\History\SellingProductZoneRateHistoryReader.cs" />
