--- a/Retail/Code/Retail.Runtime/App.config
+++ b/Retail/Code/Retail.Runtime/App.config
@@ -12,11 +12,11 @@
   <vanriseRuntime>
     <runtimeServiceGroups>
       <!-- Used for scheduling services for data sources, workflow. nbOfRuntimeInstances recommended to be equal to 1 or 2.-->
-      <!--<runtimeServiceGroup name="group2" nbOfRuntimeInstances="1">
+      <runtimeServiceGroup name="group2" nbOfRuntimeInstances="1">
         <runtimeServices>
           <runtimeService name="Scheduler Service" type="Vanrise.Runtime.SchedulerService, Vanrise.Runtime" interval="00:00:02"></runtimeService>
         </runtimeServices>
-      </runtimeServiceGroup>-->
+      </runtimeServiceGroup>
       <!-- Regulator service manages Business Process service. nbOfRuntimeInstances Keep it 1-->
       <runtimeServiceGroup name="groupA" nbOfRuntimeInstances="1">
         <runtimeServices>
@@ -36,26 +36,26 @@
         </runtimeServices>
       </runtimeServiceGroup>
       <!-- Related to processing batches from queues and saving them to database such as Main - Invalid - Failed tables. nbOfRuntimeInstances depended on available resources.-->
-      <!--<runtimeServiceGroup name="group4" nbOfRuntimeInstances="2">
+      <runtimeServiceGroup name="group4" nbOfRuntimeInstances="2">
         <runtimeServices>
           <runtimeService name="Queue Activation Service" type="Vanrise.Queueing.QueueActivationRuntimeService, Vanrise.Queueing" interval="00:00:00.100"></runtimeService>
         </runtimeServices>
-      </runtimeServiceGroup>-->
+      </runtimeServiceGroup>
       <!-- Related to saving batches as queues in database at end stages such as Billingstats and traffic stats. nbOfRuntimeInstances depended on available resources.-->
-      <!--<runtimeServiceGroup name="group5" nbOfRuntimeInstances="2">
+      <runtimeServiceGroup name="group5" nbOfRuntimeInstances="2">
         <runtimeServices>
           <runtimeService name="Summary Queue Activation Service" type="Vanrise.Queueing.SummaryQueueActivationRuntimeService, Vanrise.Queueing" interval="00:00:00.100"></runtimeService>
         </runtimeServices>
-      </runtimeServiceGroup>-->
+      </runtimeServiceGroup>
       <!-- Related to Data sources such CDR Import process. nbOfRuntimeInstances should be equal to "Number Of Parallel Readers" configured in Data source management page.-->
-      <!--<runtimeServiceGroup name="group6" nbOfRuntimeInstances="1">
+      <runtimeServiceGroup name="group6" nbOfRuntimeInstances="2">
         <runtimeServices>
           <runtimeService name="Data Source Runtime Service" type="Vanrise.Integration.Business.DataSourceRuntimeService, Vanrise.Integration.Business" interval="00:00:02"></runtimeService>
         </runtimeServices>
-      </runtimeServiceGroup>-->
+      </runtimeServiceGroup>
     </runtimeServiceGroups>
   </vanriseRuntime>
-  
+
   <vanriseLogging maxLogLevel="Information">
     <loggers>
       <logger name="SQLLogger" type="Vanrise.Logging.SQL.SQLLogger, Vanrise.Logging.SQL">
