Implementing invoice account
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41336

--- a/Vanrise/Code/Vanrise.Invoice.Business/Vanrise.Invoice.Business.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Business/Vanrise.Invoice.Business.csproj
@@ -72,6 +72,7 @@
     <Compile Include="InvoiceItemManager.cs" />
     <Compile Include="InvoiceManager.cs" />
     <Compile Include="InvoicePartnerFilter\NotAssignedPartnerToInvoiceSettingFilter.cs" />
+    <Compile Include="InvoiceAccountManager.cs" />
     <Compile Include="InvoiceSequenceManager.cs" />
     <Compile Include="InvoiceSettingManager.cs" />
     <Compile Include="InvoiceTypeConfigsManager.cs" />
