--- a/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
+++ b/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
@@ -194,6 +194,10 @@
     <Compile Include="PackageTypes\PricingPackageSettings.cs" />
     <Compile Include="PackageTypes\VolumePackageSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecurringChargeEvaluators\OneTimeRecurringChargeEvaluator.cs" />
+    <Compile Include="RecurringChargeEvaluators\OneTimeRecurringChargeEvaluatorDefinitionSettings.cs" />
+    <Compile Include="RecurringChargeEvaluators\PeriodicRecurringChargeEvaluator.cs" />
+    <Compile Include="RecurringChargeEvaluators\PeriodicRecurringChargeEvaluatorDefinitionSettings.cs" />
     <Compile Include="RecurringPeriods\MonthlyRecurringPeriodSettings.cs" />
     <Compile Include="RecurringPeriods\WeeklyRecurringPeriodSettings.cs" />
     <Compile Include="ServicePackageItem\ServicePackageChargingPolicyItem.cs" />
