Adding VRRules @Vanrise.Common
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41344

--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -148,6 +148,7 @@
     <Compile Include="VRActionAudit\VRObjectTrackingMetaData.cs" />
     <Compile Include="VRObject\VRObjectTypeCreateObjectContext.cs" />
     <Compile Include="VRObject\VRRazorCompilationOutput.cs" />
+    <Compile Include="VRRule\VRRule.cs" />
     <Compile Include="VRTax\VRTaxDetail.cs" />
     <Compile Include="VRTax\VRTaxesDefinition.cs" />
     <Compile Include="VRTax\VRTaxItem.cs" />
