--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Entities/TOne.WhS.Deal.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Entities/TOne.WhS.Deal.Entities.csproj
@@ -56,6 +56,8 @@
     <Compile Include="SwapDealAnalysis\RateCalcMethod\Outbound\SwapDealAnalysisOutboundItemRateCalcMethod.cs" />
     <Compile Include="SwapDealAnalysis\RateCalcMethod\Outbound\SwapDealAnalysisOutboundRateCalcMethod.cs" />
     <Compile Include="SwapDealAnalysis\RateCalcMethod\Outbound\SwapDealAnalysisOutboundRateCalcMethodConfig.cs" />
+    <Compile Include="SwapDeals\RouteRules\RouteRulesDefinition\SwapDealBuyRouteRuleDefinition.cs" />
+    <Compile Include="SwapDeals\RouteRules\RouteRulesDefinition\SwapDealBuyRouteRuleDefinitionSettings.cs" />
     <Compile Include="SwapDeals\RouteRules\SwapDealBuyRouteRule.cs" />
     <Compile Include="SwapDeals\RouteRules\SwapDealBuyRouteRuleSettings.cs" />
     <Compile Include="SwapDeals\SwapDealDetail.cs" />
