--- a/Vanrise/Code/Vanrise.Common.Data/Vanrise.Common.Data.csproj
+++ b/Vanrise/Code/Vanrise.Common.Data/Vanrise.Common.Data.csproj
@@ -56,6 +56,7 @@
     <Compile Include="IVRComponentTypeDataManager.cs" />
     <Compile Include="IVRLoggableEntityDataManager.cs" />
     <Compile Include="IVRObjectTrackingDataManager.cs" />
+    <Compile Include="IVRRuleDataManager.cs" />
     <Compile Include="IZoneTimeDataManager.cs" />
     <Compile Include="IDataGroupingAnalysisInfoDataManager.cs" />
     <Compile Include="IStyleDefinitionDataManager.cs" />
