Renamed Routing Product Reader with Drat
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41357

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
@@ -155,7 +155,7 @@
     <Compile Include="RatePlanManager.cs" />
     <Compile Include="Preview\RatePlanPreviewSummaryManager.cs" />
     <Compile Include="RatePlanPricingManager.cs" />
-    <Compile Include="Reader\RatePlanReadWithDraft.cs" />
+    <Compile Include="Reader\SaleEntityRoutingProductReadWithDraft.cs" />
     <Compile Include="RatePlanZoneManager.cs" />
     <Compile Include="Preview\RatePreviewManager.cs" />
     <Compile Include="Preview\SaleZoneRoutingProductPreviewManager.cs" />
