Add Mediation.CDR sql project
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41364

--- a/Mediation/Code/Mediation.Web/Web.config
+++ b/Mediation/Code/Mediation.Web/Web.config
@@ -71,7 +71,7 @@
     <add key="BCPDonotDeleteFiles" value="false"/>
     <add key="BusinessProcess_ActivityEventsTracking" value="false"/>
 
-    <add key="ExposedConnectionStringNames" value="Mediation_GenericRecord_DBConnString"/>
+    <add key="ExposedConnectionStringNames" value="Mediation_GenericRecord_DBConnString,ConfigurationDBConnString, Mediation_CDR_DBConnString"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
