--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/TOne.WhS.Deal.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/TOne.WhS.Deal.Web.csproj
@@ -110,6 +110,10 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.2\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Common.Business, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Common.Business.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
@@ -125,6 +129,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Controllers\SwapDealBuyRouteRuleController.cs" />
     <Compile Include="Controllers\VolCommitmentDealController.cs" />
     <Compile Include="Controllers\SwapDealController.cs" />
     <Compile Include="Controllers\SwapDealAnalysisController.cs" />
@@ -186,7 +191,9 @@
     <Content Include="WhS_Deal\Directives\SwapDealAnalysis\Templates\SwapDealAnalysisResultTemplate.html" />
     <Content Include="WhS_Deal\Directives\SwapDealAnalysis\Templates\SwapDealAnalysisSettingsTemplate.html" />
     <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\RouteRulesDefinition\Templates\SwapDealBuyRouteRuleDefinitionSettingsTemplate.html" />
-    <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\RouteRulesDefinition\vr-whs-deal-swapdealbuyrouteruledefinition-settings.js" />
+    <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\Templates\SwapDealBuyRouteRuleGridTemplate.html" />
+    <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\vr-whs-deal-swapdeal-buyrouterule-grid.js" />
+    <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\RouteRulesDefinition\vr-whs-deal-swapdeal-buyrouteruledefinition-settings.js" />
     <Content Include="WhS_Deal\Directives\SwapDeal\Templates\SwapDealGridTemplate.html" />
     <Content Include="WhS_Deal\Directives\SwapDeal\Templates\SwapDealOutboundGridTemplate.html" />
     <Content Include="WhS_Deal\Directives\SwapDeal\Templates\SwapDealInboundGridTemplate.html" />
@@ -213,11 +220,13 @@
     <Content Include="WhS_Deal\Directives\ZoneRateEval\vr-whs-deal-zonerateeval-max.js" />
     <Content Include="WhS_Deal\Directives\ZoneRateEval\vr-whs-deal-zonerateeval-traffic.js" />
     <Content Include="WhS_Deal\ModuleInitialization.js" />
+    <Content Include="WhS_Deal\Services\APIServices\SwapDealBuyRouteRuleAPIService.js" />
     <Content Include="WhS_Deal\Services\APIServices\VolCommitmentDealAPIService.js" />
     <Content Include="WhS_Deal\Services\APIServices\SwapDealAPIService.js" />
     <Content Include="WhS_Deal\Services\APIServices\SwapDealAnalysisAPIService.js" />
     <Content Include="WhS_Deal\Services\SwapDealAnalysisService.js" />
     <Content Include="WhS_Deal\Services\SwapDealAnalysisSettingsService.js" />
+    <Content Include="WhS_Deal\Services\SwapDealBuyRouteRuleService.js" />
     <Content Include="WhS_Deal\Services\SwapDealOutboundService.js" />
     <Content Include="WhS_Deal\Services\SwapDealInboundService.js" />
     <Content Include="WhS_Deal\Services\SwapDealService.js" />
@@ -249,7 +258,9 @@
     <Content Include="WhS_Deal\Views\VolumeCommitment\VolumeCommitmentManagement.html" />
     <Content Include="WhS_Deal\Views\VolumeCommitment\VolumeCommitmentManagementController.js" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="WhS_Deal\Views\SwapDeal\RouteRules\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
